# CodePractice

./: README.md
IO_socket_code/: epollServer.cpp  pollServer.cpp  selectServer.cpp  tcpClient.cpp  tcpServer.cpp  udpClient.cpp  udpServer.cpp
SimpleRtspServer/: CMakeLists.txt
SimpleRtspServer/src/: main.cpp
SimpleRtspServer/src/BasicUsageEnvironment/: Event.cpp  Event.h  EventScheduler.cpp  EventScheduler.h  Log.h  Poller.h  SelectPoller.cpp  SelectPoller.h  SocketsOps.cpp  SocketsOps.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  UsageEnvironment.cpp  UsageEnvironment.h
SimpleRtspServer/src/liveMedia/: AACFileMediaSource.cpp  AACFileMediaSource.h  AACFileSink.cpp  AACFileSink.h  Buffer.cpp  Buffer.h  H264FileMediaSource.cpp  H264FileMediaSource.h  H264FileSink.cpp  H264FileSink.h  InetAddress.cpp  InetAddress.h  MediaSession.cpp  MediaSession.h  MediaSessionManager.cpp  MediaSessionManager.h  MediaSource.cpp  MediaSource.h  Rtp.cpp  Rtp.h  RtpInstance.h  RtspConnection.cpp  RtspConnection.h  RtspServer.cpp  RtspServer.h  Sink.cpp  Sink.h  TcpConnection.cpp  TcpConnection.h
SimpleRtspServer/windows/: SimpleRtspServer.sln
SimpleRtspServer/windows/SimpleRtspServer/: SimpleRtspServer.vcxproj  SimpleRtspServer.vcxproj.filters
SimpleRtspServer/windows/SimpleRtspServer/x64/Debug/: SimpleRtspServer.exe.recipe  SimpleRtspServer.ilk  vc143.idb
SimpleRtspServer/windows/SimpleRtspServer/x64/Debug/SimpleRtspServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SimpleRtspServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+41 files in other folders)
